--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,17 +5,25 @@ eureka.instance.instance-id= ${spring.cloud.client.hostname}:${spring.applicatio
 
 #Configuración de rutas
 
+#Usuarios
+zuul.routes.users.service-id= microservice-user
+zuul.routes.users.path= /api-user/**
+
+#Tablas de retención documental
+zuul.routes.trds.service-id= microservice-trd
+zuul.routes.trds.path= /api-trd/**
+
 #Logical folder
 zuul.routes.folders.service-id= microservice-logical-folder
-zuul.routes.folders.path= /api/folders/**
+zuul.routes.folders.path= /api-folders/**
+
+#Archivos binarios
+zuul.routes.file.service-id= ms-file
+zuul.routes.file.path= /api-files/**
 
 #Documents
 zuul.routes.documents.service-id= microservice-document
-zuul.routes.documents.path= /api/documents/**
-
-#Usuarios
-zuul.routes.users.service-id= microservice-user
-zuul.routes.users.path= /api/users/**
+zuul.routes.documents.path= /api-documents/**
 
 #oauth2
 zuul.routes.oauth2.service-id= microservice-oauth2
