--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,4 +30,7 @@ zuul.routes.oauth2.service-id= microservice-oauth2
 zuul.routes.oauth2.path= /api/security/**
 zuul.routes.oauth2.sensitive-headers= Cookie,Set-Cookie
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 
