--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,4 +33,8 @@ zuul.routes.oauth2.sensitive-headers= Cookie,Set-Cookie
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
+hystrix.command.default.execution.isolation.thread.timeoutinmilliseconds= 20000
+ribbon.ConnectTimeout=3000
+ribbon.ReadTimeout=10000
+
 
