--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name= microservice-zuul-server
 server.port= 8090
-eureka.client.service-url.defaultzone= http://localhost:8761/eureka
+eureka.client.service-url.defaultzone= http://eureka-server:8761/eureka
 eureka.instance.instance-id= ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 #Configuración de rutas
