--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,4 +1,4 @@
 spring.application.name= microservice-zuul-server
-spring.cloud.config.uri= http://localhost:8888
-spring.profiles.active= dev
+spring.cloud.config.uri= http://config-server:8888
+spring.profiles.active= prod
 management.endpoints.web.exposure.include=*
