--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.application.name= microservice-zuul-server
 server.port= 8090
-eureka.client.service-url.defaultzone= http://eureka-server:8761/eureka
+eureka.client.serviceUrl.defaultZone= http://eureka-server:8761/eureka
 eureka.instance.instance-id= ${spring.cloud.client.hostname}:${spring.application.name}:${spring.application.instance_id:${random.value}}
 
-#Configuración de rutas
+#ConfiguraciÃ³n de rutas
 
 #Usuarios
 zuul.routes.users.service-id= microservice-user
 zuul.routes.users.path= /api-user/**
 
-#Tablas de retención documental
+#Tablas de retenciÃ³n documental
 zuul.routes.trds.service-id= microservice-trd
 zuul.routes.trds.path= /api-trd/**
 
