Ajuste en nombre del microservicio de archivos binarios

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ zuul.routes.folders.service-id= microservice-logical-folder
 zuul.routes.folders.path= /api-folders/**
 
 #Archivos binarios
-zuul.routes.file.service-id= ms-file
+zuul.routes.file.service-id= microservice-file
 zuul.routes.file.path= /api-files/**
 
 #Documents
